changed font and spacing, fixed uri malformed errors, now can scrape through as many pages as possible

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,3 +1,5 @@
+
+
 .form-inline {
     width: 100%;
     
@@ -18,3 +20,24 @@
   span.input-group-addon {
     width: 50px !important;
   }
+
+  img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+* {
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-kerning: auto;
+  font-size: 12px;
+  font-stretch: normal;
+  font-style: normal;
+  font-variant: normal;
+  font-variant-ligatures: normal;
+  font-weight: normal;
+  
+  
+}
+
+
+
